--- a/tourlist-northindia-jammu-and-kashmir-Srinagar.html
+++ b/tourlist-northindia-jammu-and-kashmir-Srinagar.html
@@ -212,7 +212,7 @@
                 </div>
             </div>
         </div>
-        <div class="image_bg--single" style="background-image: url(images/IndiaCARZ_tourlist_northindia/IndiaCARZ_tourlist_northindia_Jammu_and_Kashmir/srinagar_image4.jpg);"></div>
+        <div class="image_bg--single" style="background-image: url(https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_northindia/IndiaCARZ_tourlist_northindia_kashmir/srinagar_image4.jpg);"></div>
         <div class="page_content single-page tour-single">
             <div class="content-head">
                 <div class="wrap">
@@ -247,19 +247,19 @@
                             </div>
                             <div class="single-tour-slider" id="single-tour-slider">
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_northindia/IndiaCARZ_tourlist_northindia_Jammu_and_Kashmir/srinagar_image1.jpg" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_northindia/IndiaCARZ_tourlist_northindia_kashmir/srinagar_image1.jpg" class="image-cover" alt="">
                                 </div>
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_northindia/IndiaCARZ_tourlist_northindia_Jammu_and_Kashmir/srinagar_image2.jpg" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_northindia/IndiaCARZ_tourlist_northindia_kashmir/srinagar_image2.jpg" class="image-cover" alt="">
                                 </div>
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_northindia/IndiaCARZ_tourlist_northindia_Jammu_and_Kashmir/srinagar_image3.jpg" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_northindia/IndiaCARZ_tourlist_northindia_kashmir/srinagar_image3.jpg" class="image-cover" alt="">
                                 </div>
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_northindia/IndiaCARZ_tourlist_northindia_Jammu_and_Kashmir/srinagar_headimage.jpg" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_northindia/IndiaCARZ_tourlist_northindia_kashmir/srinagar_headimage.jpg" class="image-cover" alt="">
                                 </div>
                                 <div class="single-tour-slide">
-                                    <img src="images/IndiaCARZ_tourlist_northindia/IndiaCARZ_tourlist_northindia_Jammu_and_Kashmir/srinagar_image5.jpg" class="image-cover" alt="">
+                                    <img src="https://indiacarz-public.s3.ap-south-1.amazonaws.com/indiacarz-website-in-progress/images/IndiaCARZ_tourlist_northindia/IndiaCARZ_tourlist_northindia_kashmir/srinagar_image5.jpg" class="image-cover" alt="">
                                 </div>
 								<!-- <div class="single-tour-slide">
                                     <img src="https://indiacarz.s3.ap-south-1.amazonaws.com/indiacarz_images/indiaCARZ_tourlist_northindia/indiaCARZ_tourlist_northindia_Jammu_and_Kashmir/IndiaCARZ_tourlist_northindia_Kashmir6.jpg" class="image-cover" alt="">
